--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.mail.password=K4FdN1veJCcW9eYH
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.sql.init.platform=postgresql
-spring.sql.init.mode=always
+spring.sql.init.mode=never
